[package]
name = "exchange_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
log = "0.4.20"
serde = { version = "1.0.193", features = ["serde_derive", "derive"] }
serde_yaml = "0.9.27"
tokio = { version = "1.34.0", features = ["rt", "macros", "rt-multi-thread"] }
